Finished pet api documentation for swagger
